<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BudgetHub</string>

    <!-- Category names -->
    <!-- Expense -->
    <string name="default_expense_category_food_and_grocery" tools:keep="@string/default_expense_category_food_and_grocery">Food &amp; Grocery</string>
    <string name="default_expense_category_health" tools:keep="@string/default_expense_category_health">Health</string>
    <string name="default_expense_category_sport" tools:keep="@string/default_expense_category_sport">Sport</string>
    <string name="default_expense_category_transportation" tools:keep="@string/default_expense_category_transportation">Transportation</string>
    <string name="default_expense_category_car_and_bike" tools:keep="@string/default_expense_category_car_and_bike">Car &amp; Bike</string>
    <string name="default_expense_category_entertainment" tools:keep="@string/default_expense_category_entertainment">Entertainment</string>
    <string name="default_expense_category_house" tools:keep="@string/default_expense_category_house">House</string>
    <string name="default_expense_category_bills" tools:keep="@string/default_expense_category_bills">Bills</string>
    <string name="default_expense_category_shopping" tools:keep="@string/default_expense_category_shopping">Shopping</string>
    <string name="default_expense_category_clothing" tools:keep="@string/default_expense_category_clothing">Clothing</string>
    <string name="default_expense_category_gifts_and_donations" tools:keep="@string/default_expense_category_gifts_and_donations">Gifts &amp; Donations</string>
    <string name="default_expense_category_pets" tools:keep="@string/default_expense_category_pets">Pets</string>
    <string name="default_expense_category_education" tools:keep="@string/default_expense_category_education">Education</string>
    <string name="default_expense_category_household_items" tools:keep="@string/default_expense_category_household_items">Household Items</string>
    <string name="default_expense_category_travel" tools:keep="@string/default_expense_category_travel">Travel</string>
    <string name="default_expense_category_restaurants" tools:keep="@string/default_expense_category_restaurants">Restaurants</string>
    <!-- Income -->
    <string name="default_income_category_salary" tools:keep="@string/default_income_category_salary">Salary</string>
    <string name="default_income_category_interest" tools:keep="@string/default_income_category_interest">Interest</string>
    <string name="default_income_category_dividends" tools:keep="@string/default_income_category_dividends">Dividends</string>

    <!-- Default values for mapping-->
    <string name="default_uncategorized_category">Uncategorized</string>
    <string name="default_mock_transaction_transfer" tools:keep="@string/default_mock_transaction_transfer">Transfer</string>

    <string name="save">Save</string>
    <string name="icon">Icon</string>
    <string name="account_name">Account name</string>
    <string name="current_balance" tools:keep="@string/current_balance">Current balance</string>
    <string name="type">Type</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="deposit">Deposit</string>
    <string name="currency" tools:keep="@string/currency">Currency</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transfer">Transfer</string>
    <string name="color">Color</string>
    <string name="balance">Balance</string>
    <string name="name">Name</string>
    <string name="select">Select</string>
    <string name="new_category">New category</string>
    <string name="set_date">Set date</string>
    <string name="enter_note">Enter note</string>
    <string name="add_transaction">Add transaction</string>
    <string name="select_category">Select category</string>
    <string name="write_note">Write note</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="create_account">Create account</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="ok">OK</string>
    <string name="search_for_currency">Search for currencies</string>
    <string name="accounts">Accounts</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="label_to">to:</string>
    <string name="label_from">from:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_a_transaction">Delete a transaction</string>
    <string name="delete_a_transaction_message">Are you sure you want to delete this transaction?</string>
    <string name="confirm">Confirm</string>
    <string name="delete_a_transfer">Delete a transfer</string>
    <string name="delete_a_transfer_message">Are you sure you want to delete this transfer?</string>
    <string name="details">Details</string>
    <string name="attach_a_tag">Attach a tag</string>
    <string name="continue_label">Continue</string>
    <string name="description_image">Image</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="all">All</string>
    <string name="view_details">View details</string>
    <string name="transactions">Transactions</string>
    <string name="see_all">See all</string>
    <string name="custom_range">Custom range</string>
    <string name="tags">Tags</string>
    <string name="all_accounts">All accounts</string>
    <string name="period">Period</string>
    <string name="no_expense_for_this_period">No expense for this period.</string>
    <string name="no_income_for_this_period">No income for this period.</string>
    <string name="income_amp_expense">Income &amp; Expense</string>
    <string name="there_s_no_data_to_show_for_this_period">There\'s no data to show for this period.</string>
    <string name="there_s_no_data_for_given_filters">There\'s no data for the given filters.</string>
    <string name="select_account">Select account</string>
    <string name="all_tags">All tags</string>
    <string name="all_types">All types</string>
    <string name="select_tag">Select tag</string>
    <string name="clear_filter">Clear filter</string>
    <string name="transfers">Transfers</string>
    <string name="cd_image_no_data">No data</string>
    <string name="cd_arrow_down">Arrow down</string>
    <string name="cd_icon">Icon</string>
    <string name="cd_note_icon">Note icon</string>
    <string name="cd_tag_icon" tools:keep="@string/cd_tag_icon">Tag icon</string>
    <string name="cd_photo_icon">Photo icon</string>
    <string name="create_password">Create password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="input_your_current_password">Input your current password</string>
    <string name="password_min_length">Password must contain at least 6 symbols.</string>
    <string name="password_symbol_error">Password can only contain letters a-z, A-Z, and digits.</string>
    <string name="repeat_password">Repeat password</string>
    <string name="having_finished_press_continue">Having finished, press continue</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="there_s_no_tags_yet_create_you_first_tag">There\'s no tags yet. Create you first tag.</string>
    <string name="transaction">Transaction</string>
    <string name="new_tag">New tag</string>
    <string name="account">Account</string>
    <string name="content_description_toolbar_navigation_button">Navigate back</string>
    <string name="category_label_expense">What did you spend on?</string>
    <string name="category_label_income">Where did you get it from?</string>
    <string name="change">Change</string>
    <string name="amount">Amount</string>
    <string name="amount_to_receive">Amount to receive</string>
    <string name="amount_to_send">Amount to send</string>
    <string name="account_to_label">Where to transfer?</string>
    <string name="hint_category_name_expense">Travel, Food etc.</string>
    <string name="hint_category_name_income">Salary, Lottery etc.</string>
    <string name="cd_selected_color">Check mark</string>
    <string name="cd_add_color">Add color</string>
    <string name="hint_account_name">e.g. Visa Gold</string>
    <string name="home">Home</string>

    <!-- For testing -->
    <string name="tag_account_card_title" translatable="false">test_account_card_title</string>
    <string name="tag_view_category_title" translatable="false">tag_view_category_title</string>
    <string name="tag_view_amount_amount_edit_text" translatable="false">tag_view_amount_amount_edit_text</string>

    <plurals name="transactions">
        <item quantity="one">%d transaction</item>
        <item quantity="two">%d transactions</item>
        <item quantity="few">%d transactions</item>
        <item quantity="many">%d transactions</item>
        <item quantity="other">%d transactions</item>
    </plurals>

</resources>