...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/note"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_small"
                android:contentDescription="@string/write_note"
                android:padding="12dp"
...
                android:layout_marginHorizontal="@dimen/spacing_extra_small"
                android:contentDescription="@string/add_a_photo"
                android:padding="12dp"
                app:icon="@drawable/ic_photo_camera" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tag"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_small"
                android:contentDescription="@string/attach_a_tag"
                android:padding="12dp"
...
