...
        android:layout_marginHorizontal="@dimen/spacing_normal"
        android:layout_marginVertical="@dimen/spacing_large"
        app:layout_constraintBottom_toTopOf="@id/positive_button"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

...
